make the useragent header fetch properly add a salt to the generate_secret function -- that was kinda important right? lol just pass through to `end` if not POST or GET make it not use calls to hostname and dig in lua scripts, use haproxy backend resolving instead improve the template a lot and make it theme-matched to my site and similar to ngx_http_js_challenge robot page fix various bugs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,6 @@ services:
       - ./src/scripts/:/usr/local/etc/haproxy/scripts/
       - ./src/libs/:/usr/local/etc/haproxy/libs/
     environment:
-      - HCAPTCHA_SECRET=${HCAPTCHA_SECRET}
-      - HCAPTCHA_SITEKEY=${HCAPTCHA_SITEKEY}
-
-  nginx:
-    image: "nginx:latest"
-
-  redis:
-    image: "redis:latest"
-    ports:
-      - 6379:6379
+      - HCAPTCHA_SECRET=0x0000000000000000000000000000000000000000
+      - HCAPTCHA_SITEKEY=10000000-ffff-ffff-ffff-000000000001
+      - COOKIE_SECRET=changeme
