--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -17,13 +17,17 @@ frontend http-in
     acl ddos_mode_enabled hdr_cnt(xr3la1rfFc) eq 0
     acl domain_under_ddos hdr(host) -i -f /usr/local/etc/haproxy/domains_under_ddos.txt
     acl captcha_passed var(txn.captcha_passed) -m bool
-    acl on_captcha_url path -m beg /captcha
+    acl on_captcha_url path -m beg /bot-check
 
-    http-request use-service lua.hcaptcha-view  if on_captcha_url
+    http-request use-service lua.hcaptcha-view	if on_captcha_url
     http-request lua.hcaptcha-redirect          if !on_captcha_url ddos_mode_enabled OR domain_under_ddos
-    http-request redirect location /captcha?%[capture.req.uri] code 301 if !captcha_passed !on_captcha_url ddos_mode_enabled OR domain_under_ddos
+    http-request redirect location /bot-check?%[capture.req.uri] code 302 if !captcha_passed !on_captcha_url ddos_mode_enabled OR domain_under_ddos
 
     default_backend servers
 
 backend servers
     server server1 nginx:80 maxconn 32
+
+backend hcaptcha
+	mode http
+	server hcaptcha hcaptcha.com:443
