--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -2,7 +2,7 @@ global
     daemon
     maxconn 256
     log stdout  format raw  local0  debug
-    lua-load /usr/local/etc/haproxy/scripts/register.lua
+    lua-load /etc/haproxy/scripts/register.lua
     stats socket /var/run/haproxy.sock mode 666 level admin
 
 defaults
@@ -16,12 +16,12 @@ frontend http-in
 
 	# acl for ddos_mode_enabled = global enabled OR domain enabled
 	acl ddos_mode_enabled hdr_cnt(xr3la1rfFc) eq 0
-    acl ddos_mode_enabled hdr(host) -i -f /usr/local/etc/haproxy/ddos.map
+    acl ddos_mode_enabled hdr(host) -i -f /etc/haproxy/ddos.map
     #TODO: add ORs here for auto enable on traffic pattern
 
 	# check captcha cookie, separate map allows to disable captcha (still keeping POW)
     acl captcha_passed var(txn.captcha_passed) -m bool
-    acl captcha_passed hdr(host),map_str(/usr/local/etc/haproxy/no_captcha.map) -m found
+    acl captcha_passed hdr(host),map_str(/etc/haproxy/no_captcha.map) -m found
 
 	# check proof of work cookie
 	acl pow_passed var(txn.pow_passed) -m bool
