charset=utf8 to some service repsonses, "ray id" show in captcha page

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - HCAPTCHA_SITEKEY=
       - CAPTCHA_COOKIE_SECRET=
       - POW_COOKIE_SECRET=
+      - RAY_ID=
   nginx:
     image: "nginx:latest"
     volumes:
