--- a/haproxy/haproxy.tor.cfg
+++ b/haproxy/haproxy.tor.cfg
@@ -1,18 +1,32 @@
 global
 	daemon
 	maxconn 256
-	log stdout  format raw  local0  debug
+	log stdout  format raw  local0  notice
 	lua-load /etc/haproxy/scripts/register.lua
 	stats socket /var/run/haproxy.sock mode 666 level admin
 
 defaults
+	log global
 	mode http
 	timeout connect 5000ms
 	timeout client 50000ms
 	timeout server 50000ms
 
+frontend tor-proxy
+	#this can be a unix socket to tor, too but not between separate docker containers
+	bind *:80 accept-proxy
+	mode tcp
+	default_backend strip-tor-proxy
+
+backend strip-tor-proxy
+	mode tcp
+	server forward unix@/var/run/haproxy-haproxy.sock check send-proxy
+
 frontend http-in
-	bind *:80
+	bind unix@/var/run/haproxy-haproxy.sock accept-proxy
+
+	#forwardfor sets the circuit identifier sent by tor daemon in haproxy PROXY protocol header as the x-forwarded-for header
+	option forwardfor
 
 	acl ddos_mode_enabled hdr_cnt(xr3la1rfFc) eq 0
 	acl ddos_mode_enabled hdr(host) -i -f /etc/haproxy/ddos.map
@@ -41,8 +55,7 @@ frontend http-in
 	default_backend servers
 
 backend servers
-	server server1 nginx:80 maxconn 32
+	server server1 nginx:80
 
 backend hcaptcha
-	mode http
 	server hcaptcha hcaptcha.com:443
