--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
 version: "3.9"
 services:
+  tor:
+    build:
+      context: ./
+      dockerfile: tor/Dockerfile
   haproxy:
     build:
       context: ./
       dockerfile: haproxy/Dockerfile
-    ports:
-      - 80:80
     volumes:
       - ./haproxy/haproxy.cfg:/etc/haproxy/haproxy.cfg
+      - ./haproxy/ddos.map:/etc/haproxy/ddos.map
+      - ./haproxy/no_captcha.map:/etc/haproxy/no_captcha.map
       - ./src/scripts/:/etc/haproxy/scripts/
       - ./src/libs/:/etc/haproxy/libs/
+      - ./haproxy/js/:/var/www/js/
     environment:
       - HCAPTCHA_SECRET=
       - HCAPTCHA_SITEKEY=
