remove unnecessary layer of tcp mode for stripping proxy, works just fine without it

--- a/haproxy/haproxy.tor.cfg
+++ b/haproxy/haproxy.tor.cfg
@@ -12,18 +12,8 @@ defaults
 	timeout client 50000ms
 	timeout server 50000ms
 
-frontend tor-proxy
-	#this can be a unix socket to tor, too but not between separate docker containers
-	bind *:80 accept-proxy
-	mode tcp
-	default_backend strip-tor-proxy
-
-backend strip-tor-proxy
-	mode tcp
-	server forward unix@/var/run/haproxy-haproxy.sock check send-proxy
-
 frontend http-in
-	bind unix@/var/run/haproxy-haproxy.sock accept-proxy
+	bind :80 accept-proxy
 
 	#forwardfor sets the circuit identifier sent by tor daemon in haproxy PROXY protocol header as the x-forwarded-for header
 	option forwardfor
@@ -55,7 +45,9 @@ frontend http-in
 	default_backend servers
 
 backend servers
-	server server1 nginx:80
+    #can alternatively use a socket
+	#server server1 unix@/var/run/haproxy-nginx.sock check
+	server server1 nginx:80 check
 
 backend hcaptcha
 	server hcaptcha hcaptcha.com:443
