--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"
 services:
-  tor:
-    build:
-      context: ./
-      dockerfile: tor/Dockerfile
+#  tor:
+#    build:
+#      context: ./
+#      dockerfile: tor/Dockerfile
   haproxy:
     build:
       context: ./
