improved, now handles domain OR path protection with 0, 1, 2 setting for none, pow, captcha global override does POW only (for now --or can be easily changed for captcha+pow) until i make that customisable level too no more confusing inverted map use maps correctly as k:v cleaned up some stuff added comments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,12 @@ services:
       context: ./
       dockerfile: haproxy/Dockerfile
     ports:
-      - 80:80
+      - 80:80 #http
+      - 2000:2000 #port 2000 haproxy socket for external management
     volumes:
       - ./haproxy/haproxy.cfg:/etc/haproxy/haproxy.cfg
       - ./haproxy/ddos.map:/etc/haproxy/ddos.map
-      - ./haproxy/no_captcha.map:/etc/haproxy/no_captcha.map
+      - ./haproxy/hosts.map:/etc/haproxy/hosts.map
       - ./src/scripts/:/etc/haproxy/scripts/
       - ./src/libs/:/etc/haproxy/libs/
       - ./haproxy/js/:/var/www/js/
