--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
 #      context: ./
 #      dockerfile: tor/Dockerfile
   haproxy:
+    network_mode: "host"
     build:
       context: ./
       dockerfile: haproxy/Dockerfile
@@ -15,6 +16,8 @@ services:
       - ./haproxy/haproxy.cfg:/etc/haproxy/haproxy.cfg
       - ./haproxy/ddos.map:/etc/haproxy/ddos.map
       - ./haproxy/hosts.map:/etc/haproxy/hosts.map
+      - ./haproxy/backends.map:/etc/haproxy/backends.map
+      - ./haproxy/blocked.map:/etc/haproxy/blocked.map
       - ./src/scripts/:/etc/haproxy/scripts/
       - ./src/libs/:/etc/haproxy/libs/
       - ./haproxy/js/:/var/www/js/
@@ -25,7 +28,11 @@ services:
       - POW_COOKIE_SECRET=
       - RAY_ID=
       - BUCKET_DURATION=43200
+      - BACKEND_NAME="servers"
+      - SERVER_PREFIX="websrv"
   nginx:
+    ports:
+      - 81:80
     image: "nginx:latest"
     volumes:
       - ./nginx:/usr/share/nginx/html
