--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -12,10 +12,13 @@ defaults
 	timeout client 50000ms
 	timeout server 50000ms
 
+program api
+    command dataplaneapi -f /etc/haproxy/dataplaneapi.hcl --update-map-files
+    no option start-on-reload
+
 frontend http-in
 	option httplog
 	bind *:80
-	bind *:443
 
 	acl is_existing_vhost hdr(host),lower,map_str(/etc/haproxy/hosts.map) -m found
 	http-request silent-drop unless is_existing_vhost
