--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -22,6 +22,8 @@ frontend http-in
 	acl is_existing_vhost hdr(host),lower,map_str(/etc/haproxy/hosts.map) -m found
 	http-request silent-drop unless is_existing_vhost
 
+	http-request return status 200 content-type "text/html; charset=utf-8" lf-file /etc/haproxy/trace.html if { path /cdn-cgi/trace }
+
 	# acl for blocked IPs/subnets
 	acl blocked_ip_or_subnet src,map_ip(/etc/haproxy/blocked.map) -m found
 	http-request deny deny_status 403 if blocked_ip_or_subnet
