--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,6 @@ services:
     ports:
       - 80:80 #http
       - 2000:2000 #port 2000 haproxy socket for external management
-      - 2001:2001 #dataplaneapi
     volumes:
       - ./haproxy/haproxy.cfg:/etc/haproxy/haproxy.cfg
       - ./haproxy/ddos.map:/etc/haproxy/ddos.map
@@ -27,8 +26,8 @@ services:
     environment:
       - HCAPTCHA_SECRET=
       - HCAPTCHA_SITEKEY=
-      - CAPTCHA_COOKIE_SECRET=
-      - POW_COOKIE_SECRET=
+      - CAPTCHA_COOKIE_SECRET=changeme
+      - POW_COOKIE_SECRET=changeme
       - RAY_ID=docker
       - BUCKET_DURATION=43200
       - BACKEND_NAME=servers
