readme update, remove ssl from haproxy since its just the docker example

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -75,7 +75,7 @@ backend servers
 	http-response cache-store basic_cache if can_cache
 
 	# placeholder servers, activated by LUA or the control panel
-    server-template websrv 1-100 0.0.0.0:80 check disabled ssl verify none
+    server-template websrv 1-100 0.0.0.0:80 check disabled
 	# use server based on hostname
 	use-server %[req.hdr(host),lower,map(/etc/haproxy/backends.map)] if TRUE
 
