--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -45,6 +45,10 @@ frontend http-in
 	http-request return file /var/www/js/sha1.js status 200 content-type "application/javascript; charset=utf-8" hdr "cache-control" "public, max-age=300" if is_sha1_js
 	http-request return file /var/www/js/worker.js status 200 content-type "application/javascript; charset=utf-8" hdr "cache-control" "public, max-age=300" if is_worker_js
 
+	# acl for domains in maintenance mode to return maintenance page (after challenge page htp-request return rules, for the footerlogo)
+	acl maintenance_mode hdr(host),lower,map_str(/etc/haproxy/maintenance.map) -m found
+	http-request return file /var/www/html/maintenance.html status 200 content-type "text/html; charset=utf-8" hdr "cache-control" "private, max-age=30" if maintenance_mode
+
 	# create acl for bools updated by lua
 	acl captcha_passed var(txn.captcha_passed) -m bool
 	acl pow_passed var(txn.pow_passed) -m bool
