google recaptcha v2 support

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -91,3 +91,7 @@ backend servers
 backend hcaptcha
 	mode http
 	server hcaptcha hcaptcha.com:443
+
+backend recaptcha
+	mode http
+	server recaptcha www.google.com:443
