- Fix some docker-compose issues close #14 - Move to new scheme with some hashing, sigs, and a random user key. close #13 - Change to sha256 rather than sha1 (temporary, but i guess its slightly more secure which is nice for now) ref #10 - Change POW output checked value - Add lib for randombytes, udpate lua sha lib - Remove outdated difficulty checks in frontend (was hardcoded 0 anyway) and since algo change is coming soon, there is no need to keep it

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -5,6 +5,7 @@ global
 	lua-load /etc/haproxy/scripts/register.lua
 	stats socket /var/run/haproxy.sock mode 666 level admin
 	stats socket *:2000 level admin
+	httpclient.ssl.verify none
 
 defaults
 	mode http
@@ -20,8 +21,8 @@ frontend http-in
 	bind *:80
 
 	# drop requests with invalid host header
-	acl is_existing_vhost hdr(host),lower,map_str(/etc/haproxy/hosts.map) -m found
-	http-request silent-drop unless is_existing_vhost
+	#acl is_existing_vhost hdr(host),lower,map_str(/etc/haproxy/hosts.map) -m found
+	#http-request silent-drop unless is_existing_vhost
 
 	# debug only, /cdn-cgi/trace
 	#http-request return status 200 content-type "text/plain; charset=utf-8" lf-file /etc/haproxy/trace.txt if { path /cdn-cgi/trace }
@@ -40,9 +41,9 @@ frontend http-in
 	acl ddos_mode_enabled base,map(/etc/haproxy/ddos.map) -m bool
 
 	# serve challenge page scripts directly from haproxy
-	acl is_sha1_js path /js/sha1.js
+	acl is_challenge_js path /js/challenge.js
 	acl is_worker_js path /js/worker.js
-	http-request return file /var/www/js/sha1.js status 200 content-type "application/javascript; charset=utf-8" hdr "cache-control" "public, max-age=300" if is_sha1_js
+	http-request return file /var/www/js/challenge.js status 200 content-type "application/javascript; charset=utf-8" hdr "cache-control" "public, max-age=300" if is_challenge_js
 	http-request return file /var/www/js/worker.js status 200 content-type "application/javascript; charset=utf-8" hdr "cache-control" "public, max-age=300" if is_worker_js
 
 	# acl for domains in maintenance mode to return maintenance page (after challenge page htp-request return rules, for the footerlogo)
