--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,11 @@ services:
 #      context: ./
 #      dockerfile: tor/Dockerfile
   haproxy:
-    network_mode: "host"
+    ports:
+      - 80:80
     build:
       context: ./
       dockerfile: haproxy/Dockerfile
-    ports:
-      - 80:80 #http
-      - 2000:2000 #port 2000 haproxy socket for external management
     volumes:
       - ./haproxy/haproxy.cfg:/etc/haproxy/haproxy.cfg
       - ./haproxy/ddos.map:/etc/haproxy/ddos.map
@@ -25,11 +23,13 @@ services:
       - ./src/scripts/:/etc/haproxy/scripts/
       - ./src/libs/:/etc/haproxy/libs/
       - ./haproxy/js/:/var/www/js/
+      - ./haproxy/html/maintenance.html:/var/www/html/maintenance.html
     environment:
-      - RECAPTCHA_SECRET=
-      - RECAPTCHA_SITEKEY=
+      - RECAPTCHA_SECRET=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+      - RECAPTCHA_SITEKEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
       - CAPTCHA_COOKIE_SECRET=changeme
       - POW_COOKIE_SECRET=changeme
+      - HMAC_COOKIE_SECRET=changeme
       - RAY_ID=docker
       - BUCKET_DURATION=43200
       - BACKEND_NAME=servers
