Add example snippet of how to acl/whitelist stats sockte

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -4,7 +4,7 @@ global
 	log stdout  format raw  local0  debug
 	lua-load /etc/haproxy/scripts/register.lua
 	stats socket /var/run/haproxy.sock mode 666 level admin
-	stats socket *:2000 level admin
+	stats socket 127.0.0.1:1999 level admin
 	httpclient.ssl.verify none
 
 defaults
@@ -12,6 +12,18 @@ defaults
 	timeout connect 5000ms
 	timeout client 50000ms
 	timeout server 50000ms
+
+#frontend stats-frontend
+#	bind *:2000
+#	option tcplog
+#	mode tcp
+#	acl white_list src xxx.xxx.xxx.xxx
+#	tcp-request connection reject unless white_list
+#	default_backend stats-backend
+
+#backend stats-backend
+#	mode tcp
+#	server stats-localhost 127.0.0.1:1999
 
 frontend http-in
 	bind *:80
