--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - BUCKET_DURATION=43200
       - BACKEND_NAME=servers
       - SERVER_PREFIX=websrv
+      #- CHALLENGE_INCLUDES_IP=1
   nginx:
     ports:
       - 81:80
