Small docker improvement for better testing/development (no more 503)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
 #      context: ./
 #      dockerfile: tor/Dockerfile
   haproxy:
+    network_mode: host
     ports:
       - 80:80
     build:
