Improve & cleanup README, docker-compose, haproxy config

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -28,11 +28,17 @@ defaults
 #	server stats-localhost 127.0.0.1:1999
 
 frontend http-in
+
+	# Clearnet http (you'll have to figure out https yourself)
 	bind *:80
 
+	# Or instead, for Tor, to use circuit IDs as "IP":
+	#bind 127.0.0.1:80 accept-proxy
+	#option forwardfor
+
 	# drop requests with invalid host header
-	#acl is_existing_vhost hdr(host),lower,map_str(/etc/haproxy/hosts.map) -m found
-	#http-request silent-drop unless is_existing_vhost
+	acl is_existing_vhost hdr(host),lower,map_str(/etc/haproxy/hosts.map) -m found
+	http-request silent-drop unless is_existing_vhost
 
 	# debug only, /cdn-cgi/trace
 	#http-request return status 200 content-type "text/plain; charset=utf-8" lf-file /etc/haproxy/trace.txt if { path /cdn-cgi/trace }
