--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 version: "3.9"
 services:
-#  tor:
-#    build:
-#      context: ./
-#      dockerfile: tor/Dockerfile
+
   haproxy:
     network_mode: host
     ports:
@@ -37,13 +34,19 @@ services:
       - BUCKET_DURATION=43200
       - BACKEND_NAME=servers
       - SERVER_PREFIX=websrv
-      #- CHALLENGE_INCLUDES_IP=1
+      - CHALLENGE_INCLUDES_IP=1
       - POW_TIME=1
       - POW_KB=6000
       - POW_DIFFICULTY=3
+
   nginx:
     ports:
       - 81:80
     image: "nginx:latest"
     volumes:
       - ./nginx:/usr/share/nginx/html
+
+#  tor:
+#    build:
+#      context: ./
+#      dockerfile: tor/Dockerfile
